--- a/index.html
+++ b/index.html
@@ -7,22 +7,29 @@
 		<link rel="stylesheet" href="style/index.css"/>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
 		<meta charset="utf-8"/>
+
+        <!-- Add jQuery library -->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+
 		<title>Ovidiu Berdila UX Designer</title>
 	</head>
 	<body>
-		<div id="left_panel">
-			<div id="photo_container">
-				<img id="profile_photo" src="img/profile_photo.png"/>
-				<div id="summary"><span id="name">Ovidiu Berdila</span><br><span id="statement">I like to design simple and elegant solutions for complex problems.</span></div>
-			</div>
-			<div id="menu">
-				<div>About</div>
-				<div><a href="projects.html">Projects</a></div>
-				<div><a href="education.html">Education</a></div>
-				<div><a href="contact.html">Contact</a></div>	
-			</div>
-		</div>
-		<div id="right_panel">
+    <script>
+        $(document).ready(function () {
+            $("#side_menu").load("side_menu.html", function () {
+                        var menuItemId = "#menu_about";
+                        var itemLinkId = menuItemId + " a";
+                        var menuItemText = $(itemLinkId).text();
+                        $(itemLinkId).remove();
+                        $(menuItemId).text(menuItemText);
+                    }
+            );
+        });
+    </script>
+
+		<div id="side_menu"></div>
+
+        <div id="right_panel">
 			<div id="about">
 				<div>Hello, <br><br>
 					I am a Java UI developer, looking to get involved more in the beautiful field of User Experience
