added the top menu and the media queries, work in progress

--- a/be_healthy.html
+++ b/be_healthy.html
@@ -60,14 +60,14 @@
 			});
 
             $(document).ready(function () {
+                $("#top_menu").load("top_menu.html");
                 $("#side_menu").load("side_menu.html");
             });
 		</script>
 
+        <div id="top_menu"></div>
 		<div id="side_menu"></div>
 		<div id="right_panel">
-
-
 
 			<div class="content">
 				<h1>BE HEALTHY!</h1>
