--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<body>
     <script>
         $(document).ready(function () {
+            $("#top_menu").load("top_menu.html");
+
             $("#side_menu").load("side_menu.html", function () {
                         var menuItemId = "#menu_about";
                         var itemLinkId = menuItemId + " a";
@@ -27,6 +29,7 @@
         });
     </script>
 
+		<div id="top_menu"></div>
 		<div id="side_menu"></div>
 
         <div id="right_panel">
