--- a/education.html
+++ b/education.html
@@ -52,6 +52,7 @@
 
 
             $(document).ready(function () {
+                $("#top_menu").load("top_menu.html");
                 $("#side_menu").load("side_menu.html", function () {
                             var menuItemId = "#menu_education";
                             var itemLinkId = menuItemId + " a";
@@ -64,6 +65,7 @@
 
 		</script>
 
+        <div id="top_menu"></div>
 		<div id="side_menu"/></div>
 
 		<div id="right_panel">
