--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,8 @@
 	<body>
 		<script>
             $(document).ready(function () {
+                $("#top_menu").load("top_menu.html");
+
                 $("#side_menu").load("side_menu.html", function () {
                             var menuItemId = "#menu_projects";
                             var itemLinkId = menuItemId + " a";
@@ -29,7 +31,8 @@
                 );
             });
 		</script>
-	
+
+        <div id="top_menu"></div>
 		<div id="side_menu"></div>
 		<div id="right_panel">
 			<div id="about_projects">
