--- a/quesee.html
+++ b/quesee.html
@@ -63,10 +63,12 @@
 			});
 
             $(document).ready(function () {
+                $("#top_menu").load("top_menu.html");
                 $("#side_menu").load("side_menu.html");
             });
 		</script>
 
+        <div id="top_menu"></div>
 		<div id="side_menu"></div>
 		<div id="right_panel">
 
