added hamburger icon and centered and styled title

--- a/top_menu.html
+++ b/top_menu.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<span id="hamburger_menu">=</span>
+<span id="hamburger_menu"><img src="img/hamburger-black.png"/></span>
 <span id="mobile_title">Ovidiu Berdila - UX Designer</span>
 
 </body>
