added the hamburger menu interaction on all pages

--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,14 @@
 
         <!-- Add jQuery library -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <script type="text/javascript" src="js/menu_utils.js"></script>
 
-		<title>Ovidiu Berdila - Education</title>
+        <title>Ovidiu Berdila - Education</title>
 	</head>
 	<body>
         <script>
             $(document).ready(function () {
-                $("#top_menu").load("top_menu.html");
+                $("#top_menu").load("top_menu.html", initTopMenuActions);
                 $("#side_menu").load("side_menu.html", function () {
                             var menuItemId = "#menu_contact";
                             var itemLinkId = menuItemId + " a";
