--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
         <!-- Add jQuery library -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <script type="text/javascript" src="js/menu_utils.js"></script>
 
 		<title>Ovidiu Berdila UX Designer</title>
 	</head>
 	<body>
     <script>
         $(document).ready(function () {
-            $("#top_menu").load("top_menu.html");
+            $("#top_menu").load("top_menu.html", initTopMenuActions);
 
             $("#side_menu").load("side_menu.html", function () {
                         var menuItemId = "#menu_about";
