--- a/quesee.html
+++ b/quesee.html
@@ -34,7 +34,10 @@
 		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
 		<link rel="stylesheet" href="style/fancybox_styling.css"/>
-	</head>
+
+        <script type="text/javascript" src="js/menu_utils.js"></script>
+
+    </head>
 
 	<body>
 
@@ -63,7 +66,7 @@
 			});
 
             $(document).ready(function () {
-                $("#top_menu").load("top_menu.html");
+                $("#top_menu").load("top_menu.html", initTopMenuActions);
                 $("#side_menu").load("side_menu.html");
             });
 		</script>
