--- a/curation.html
+++ b/curation.html
@@ -35,7 +35,9 @@
 
 		<link rel="stylesheet" href="style/fancybox_styling.css"/>
 
-	</head>
+        <script type="text/javascript" src="js/menu_utils.js"></script>
+
+    </head>
 
 	<body>
 
@@ -64,7 +66,7 @@
 			});
 
             $(document).ready(function () {
-                $("#top_menu").load("top_menu.html");
+                $("#top_menu").load("top_menu.html", initTopMenuActions);
                 $("#side_menu").load("side_menu.html");
             });
 		</script>
