added meta information to tell iphone to use the native resolution

--- a/quesee.html
+++ b/quesee.html
@@ -10,7 +10,9 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'/>
 		<link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
 
+        <meta name="viewport" content="width=device-width">
 		<meta charset="utf-8"/>
+
 		<title>Quesee - Test automation tool</title>
 
 		<!-- Add jQuery library -->
