--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,9 @@
 		<link rel="stylesheet" href="style/layout.css"/>
 		<link rel="stylesheet" href="style/contact.css"/>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-		<meta charset="utf-8"/>
+
+        <meta name="viewport" content="width=device-width">
+        <meta charset="utf-8"/>
 
         <!-- Add jQuery library -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
