--- a/education.html
+++ b/education.html
@@ -6,7 +6,10 @@
 		<link rel="stylesheet" href="style/education.css"/>
 		<!--<link rel="stylesheet" href="style/customgrid.css"/>-->
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-		<meta charset="utf-8"/>
+
+        <meta name="viewport" content="width=device-width">
+        <meta charset="utf-8"/>
+
 		<title>Ovidiu Berdila - Education</title>
 		
 		<!-- Add jQuery library -->
