--- a/test_history.html
+++ b/test_history.html
@@ -11,7 +11,9 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'/>
 		<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'/>
 
+        <meta name="viewport" content="width=device-width">
 		<meta charset="utf-8"/>
+
 		<title>Test Execution History Chart</title>
 
 		<!-- Add jQuery library -->
