added less to the project to simplify the style sheets

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 					working for a company that produces software for the financial industry.
 					They brought in a <a href="http://www.didi.com/">design expert</a> from the United States to teach a class about user-centered design.
 					Since then, I have been working on complex and interesting user interfaces for both financial and
-					bioinformatics industries.
+					bio informatics industries.
 				</div>
 				<div>When I am not working, I like to travel, read, dance and watch sports. I particularly like snooker,
 					combat sports and most recently, Formula 1 racing.
 				</div>
 
-				<div>I would appreciate if you dropped me line, sharing your thoughts about my work or any other topic related to User Interface Design.</div>
+				<div>I would appreciate if you dropped me a line, sharing your thoughts about my work or any other topic related to User Interface Design.</div>
 			</div>
 		</div>
 	</body>
