fixed title and padding issues for the mobile version

--- a/top_menu.html
+++ b/top_menu.html
@@ -6,7 +6,10 @@
 <body>
 
 <span id="hamburger_menu"><img src="img/hamburger-black.png"/></span>
-<span id="mobile_title">Ovidiu Berdila - UX Designer</span>
+<span id="mobile_title">
+    <span class="name">Ovidiu Berdila</span>
+    <span class="title">UX Designer</span>
+</span>
 
 </body>
 </html>
