started to fix the responsiveness of the articles

--- a/be_healthy.html
+++ b/be_healthy.html
@@ -108,9 +108,9 @@
 					process, I created a couple of storyboards that sum up the interactions between the users and the
 					service.</p>
 
-				<a class="fancybox" rel="storyboards" title="Cooking a quick and healthy dinner on a Sunday evening" href="img/hci_project/hand drawn/cooking_storyboard_full_size.jpg"><img id="function_candidates_1" src="img/hci_project/hand drawn/cooking_storyboard_stripe.jpg" alt="" /></a>
+				<a class="fancybox" rel="storyboards" title="Cooking a quick and healthy dinner on a Sunday evening" href="img/hci_project/hand drawn/cooking_storyboard_full_size.jpg"><img class="gallery1" id="function_candidates_1" src="img/hci_project/hand drawn/cooking_storyboard_stripe.jpg" alt="" /></a>
 				<br>
-				<a class="fancybox" rel="storyboards" title="Exercising on a Wednesday evening" href="img/hci_project/hand drawn/exercise_storyboard_full_size.jpg"><img id="function_candidates_1" src="img/hci_project/hand drawn/exercise_storyboard_stripe.jpg" alt="" /></a>
+				<a class="fancybox" rel="storyboards" title="Exercising on a Wednesday evening" href="img/hci_project/hand drawn/exercise_storyboard_full_size.jpg"><img  class="gallery1" id="function_candidates_1" src="img/hci_project/hand drawn/exercise_storyboard_stripe.jpg" alt="" /></a>
 				
 				<h2>WIREFRAMES</h2>
 
@@ -138,7 +138,7 @@
 					version and offers actions needed when the user is gone shopping for healthy food, exercising or
 					relaxing. The following screens are a continuation of the scenario presented above:</p>
 
-				<a class="fancybox" rel="mobile_wireframes" title="Mobile Sketches of the scenario where the user goes shopping with a previously created shopping list" href="img/hci_project/hand drawn/mobile_sketches.jpg"><img id="function_candidates_1" src="img/hci_project/hand drawn/mobile_sketches.jpg" alt="" /></a>
+				<a class="fancybox" rel="mobile_wireframes" title="Mobile Sketches of the scenario where the user goes shopping with a previously created shopping list" href="img/hci_project/hand drawn/mobile_sketches.jpg"><img class="gallery1" id="function_candidates_1" src="img/hci_project/hand drawn/mobile_sketches.jpg" alt="" /></a>
 
 				<h2>PROTOTYPES</h2>
 
